<resources>
    <string name="app_name">Hook</string>

    <string name="label_hook_kr">훅</string>

    <!-- home -->
    <string name="label_home">홈</string>
    <string name="label_tag">태 그</string>
    <string name="label_folder">폴 더</string>
    <string name="label_setting">설 정</string>


    <!--folder -->
    <string name="appbar_title_folder_screen">폴 더</string>
    <string name="description_select_tag">선택 태그 값</string>
    <string name="app_title">Hook</string>

    <!--splashView-->
    <string name="label_splah_title">h o o k!</string>
    <string name="label_tag_count">개의 훅</string>
    <string name="label_google_login">로그인 버튼</string>
    <string name="label_recent_tag">최근에 저장한 훅</string>


    <!--url_hook_detail-->
    <string name="description_back_button">back button</string>
    <string name="description_link">링크</string>
    <string name="label_url_hook_detail_folder">폴더</string>
    <string name="label_url_hook_detail_tag">태그</string>
    <string name="description_save_changes">태그 수정하기</string>
    <string name="appbar_title_tag_screen">태 그</string>
    <string name="appbar_title_home_fragment">H o o k !</string>
    <string name="add_new_hook">훅 추가</string>
    <string name="see_etc_info">기타 정보 보기</string>
    <string name="hint_url_link">https://</string>
    <string name="open_in_browser">브라우저에서 열기</string>
    <string name="share">공유하기</string>
    <string name="delete">삭제하기</string>
    <string name="option">option</string>
    <string name="add_hook">훅 추가</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_valid_url">유효한 URL 주소가 아닙니다. 다시 확인해주세요.</string>
    <string name="title">제목</string>
    <string name="not_allow_initial_blank">제목의 첫 글자는 공백 문자가 허용되지 않습니다.</string>
    <string name="etc_info">기타 정보</string>
    <string name="link_info">링크 정보</string>
    <string name="description">설명</string>
    <string name="tag">태그</string>
    <string name="sharp">#</string>
    <string name="add">추가하기</string>
    <string name="input_title">제목을 입력해주세요.</string>
    <string name="not_allow_blank_in_first">제목의 첫 글자는 공백 문자가 허용되지 않습니다.</string>
    <string name="input_sescription">설명을 입력해주세요.</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="add_tag">태그 추가</string>
    <string name="input_tag">태그를 입력해주세요.</string>
    <string name="adding_tag">태그 추가하기</string>
    <string name="set_pin">고정하기</string>
    <string name="modify">수정하기</string>
    <string name="remove_pin">고정 해제하기</string>
    <string name="search_hook">훅을 검색하세요</string>
    <string name="go_back">뒤로 가기</string>
    <string name="tag_list">태그 리스트</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="get_started">시 작 하 기</string>
    <string name="back">BACK</string>
    <string name="title1"></string>
    <string name="title2"></string>
    <string name="title3">Hook이 보이지 않는다고요?</string>
    <string name="title4">거의 다 끝났어요!</string>
    <string name="title5">링크를 바로 저장할 수 있어요!</string>
    <string name="des1">저장하고 싶은 페이지에서\n공유하기를 눌러보세요</string>
    <string name="des2">하단에 뜨는 목록에서 \nHook을 선택해 주세요</string>
    <string name="des3">목록을 옆으로 넘기면 더보기가 나와요</string>
    <string name="des4">더보기 버튼을 누른 후,\n목록에서 Hook을 선택해 주세요</string>
    <string name="des5">제목과 설명 그리고 태그를 달아\n효과적으로 링크를 관리할 수 있어요</string>
    <string name="save">저장하기</string>
    <string name="save_hook">저장하기</string>
    <string name="plz_input_tag">태그를 입력하세요</string>
    <string name="select_tag">태그 선택</string>
    <string name="tutorial">시작하기</string>
    <string name="yes">네</string>
    <string name="no">아니요</string>


    <string name="add_first_hook">연필 모양을 눌러 \n훅을 추가해 보세요! \n👇</string>
    <string name="tutorial_again">튜토리얼 다시보기</string>
    <string name="question_tut_again">튜토리얼을 다시 보시겠습니까?</string>

    <!--delete tag-->
    <string name="question_really_delete_tag">정말 삭제하시겠습니까?</string>
    <string name="question_really_modi_tag">정말 수정하시겠습니까?</string>
    <string name="delete_tag">태그 삭제하기</string>
    <string name="delete_tag_content">저장하신 태그가 삭제됩니다.</string>
    <string name="modify_tag">태그 수정</string>
    <string name="title_tut_again">튜토리얼 다시보기</string>
    <string name="hint_input_title">제목 입력</string>
    <string name="hint_url">URL 링크</string>
    <string name="hint_input_des">설명 입력</string>
    <string name="cancel2">취소</string>

    <!--튜토리얼-->
    <string name="tut_msg1">"안녕하세요!😊 "</string>
    <string name="tut_msg2">Hook에 오신 것을 환영합니다</string>
    <string name="tut_msg3">Hook을 사용해보신 적이 있으신가요?</string>
    <string name="tut_msg4">좋아요! 그럼 튜토리얼을 건너뛸까요?</string>
    <string name="tut_msg5">그렇군요!</string>
    <string name="tut_msg6">Hook을 편리하게 사용할 수 있는 방법을 알려 드릴게요!</string>
    <string name="tut_msg7">그래도 다시 설명해주세요</string>
    <string name="yes2">좋아요!</string>
    <string name="plz_input_title">제목을 입력해주세요.</string>
    <string name="plz_input_url">URL을 입력해주세요.</string>
    <string name="get_current_url">가장 최근에 복사한 URL을 가져왔어요!</string>
    <string name="no_valid_url">클립보드에 유효한 URL이 없습니다.</string>
    <string name="empty_clipboard">클립보드가 비어 있습니다.</string>
    <string name="exist_tag">이미 존재하는 태그입니다.</string>
    <string name="exist_app">뒤로 가기를 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="share_hook">Hook 공유</string>
    <string name="delete_tag_success_message">태그가 삭제되었습니다</string>

</resources>