<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="60dp"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/horizontal_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/ic_horizontal_rule"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_set_pin"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_detail_border"
            android:backgroundTint="@color/purple"
            android:elevation="5dp"
            android:text="@string/set_pin"
            android:textAppearance="@style/AppTextPrimary.S14"
            android:textColor="@color/white"
            app:icon="@drawable/ic_hook_white"
            app:iconPadding="-20dp"
            app:iconSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_bar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share_hook"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_detail_border"
            android:backgroundTint="@color/purple"
            android:elevation="5dp"
            android:text="@string/share"
            android:textAppearance="@style/AppTextPrimary.S14"
            android:textColor="@color/white"
            app:icon="@drawable/ic_share"
            app:iconPadding="-20dp"
            app:iconSize="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_set_pin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_modify_hook"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_detail_border"
            android:backgroundTint="@color/purple"
            android:elevation="5dp"
            android:text="@string/modify"
            android:textAppearance="@style/AppTextPrimary.S14"
            android:textColor="@color/white"
            app:icon="@drawable/ic_draw"
            app:iconPadding="-20dp"
            app:iconSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_share_hook" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete_hook"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_detail_border"
            android:backgroundTint="@color/purple"
            android:text="@string/delete"
            android:textAppearance="@style/AppTextPrimary.S14"
            android:textColor="@color/white"
            app:elevation="4dp"
            app:icon="@drawable/ic_delete"
            app:iconPadding="-20dp"
            app:iconSize="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_modify_hook" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>