<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_delete_tag"
        android:layout_width="375dp"
        android:layout_height="221dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_background_little"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_link_info"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:text="@string/question_really_delete_tag"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/container_tag_name"
            app:layout_constraintStart_toStartOf="@id/view_delete_tag"
            app:layout_constraintTop_toTopOf="@id/view_delete_tag" />

        <View
            android:id="@+id/container_tag_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/textview_detail_border"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toTopOf="@id/btn_delete_tag"
            app:layout_constraintEnd_toEndOf="@id/view_delete_tag"
            app:layout_constraintStart_toStartOf="@id/view_delete_tag"
            app:layout_constraintTop_toBottomOf="@id/tv_link_info" />


        <me.grantland.widget.AutofitTextView
            android:id="@+id/tv_delete_tag_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:fontFamily="@font/notosan_r"
            android:maxLines="1"
            android:text="@string/delete_tag_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/container_tag_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/container_tag_name"
            app:layout_constraintTop_toTopOf="@id/container_tag_name" />

        <TextView
            android:id="@+id/btn_delete_tag"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_background_little"
            android:backgroundTint="@color/purple"
            android:gravity="center"
            android:text="@string/delete_tag"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/container_tag_name"
            app:layout_constraintStart_toStartOf="@id/container_tag_name"
            app:layout_constraintTop_toBottomOf="@id/container_tag_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
